--- a/index.html
+++ b/index.html
@@ -5,6 +5,62 @@
     <title>Deepak Shama - Graphic Designer & Web Developer</title>
   </head>
   <body>
-    <p>This is the place where i'm gonna learn about web development</p>
+    <table>
+      <tr>
+        <td><img src="img\Deepak_Sharma_profile_photo.png" height="200px" alt="Deepak_Sharma_profile_photo"></td>
+        <td>
+          <table>
+            <tr> <h1>Deepak Sharma</h1> </tr>
+            <tr> <p>Web Developer & Graphic Designer</p> </tr>
+            <tr> <p>I love music!</p> </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+    
+    <hr>
+
+    <h3>Skills</h3>
+    <ul>
+      <li>Microsoft Office -(Word, Excel & Powerpoint)</li>
+      <li>Adobe Photoshop</li>
+      <li>Corel Draw</li>
+      <li>Canva - An online graphic designing tool</li>
+      <li>55wpm Typing Speed</li>
+      <li>Languages - Hindi, English & Punjabi</li>
+      <li>Programing Languages - C, C++, Java, Javascript, PHP</li>
+    </ul>
+
+    <h3>Hobbies</h3>
+    <ul>
+      <li>Guitar Playing</li>
+      <li>Movie Watching</li>
+      <li>Song Listening</li>
+    </ul>
+
+    <hr>
+
+    <h3>Work Experience</h3>
+    <table>
+      <tr>
+        <th>Dates</th>
+        <th>Work</th>
+      </tr>
+
+      <tr>
+        <td>2016-2017</td>
+        <td>Graphic Designing with Corel Draw & Adobe Photoshop</td>
+      </tr>
+
+      <tr>
+        <td>2018-2020</td>
+        <td>Core Member of Technominds IT Club of DAV College Chandigarh</td>
+      </tr>
+
+      <tr>
+        <td>2020-NOW</td>
+        <td>Web Developer & Graphic Designer in HealMe Holistic Clinic</td>
+      </tr>
+    </table>
   </body>
 </html>
